添加mysql实现post登录

--- a/root/video.html
+++ b/root/video.html
@@ -12,6 +12,6 @@
 <br/>
 <br/>
 <div align="center"><video width="906" height="506" controls>
-    <source src="xxx.mp4" type="video/mp4">
+    <source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4">
 </video></div>
 </html>
